# GUSMI-STORE

./: .dockerignore  .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  README.md  capture_prod_error.py  check_all_paths.py  check_all_tables.py  check_columns.py  check_db_paths.py  check_filename_chars.py  check_final_filenames.py  check_hex_path.py  check_images_db.py  check_img_headers.py  check_img_type.py  check_img_urls.py  check_magic_bytes.py  check_po_columns.py  check_repr_paths.py  check_slashes.py  check_store_visibility.py  check_tablet_filename.py  check_tablet_img.py  compare_images.py  debug_images.py  diag_output.txt  fix_all_schemas_final.py  fix_prod_schema.py  inspect_products.py  list_images.py  list_images_v2.py  list_tables.py  main.py  package-lock.json  package.json  pyproject.toml  test_registration.py
backend/: .env.example  Dockerfile  check_api.py  debug_products.py  docker-compose.yml  final_cleanup.py  inventory.db  main.py  migrate_db.py  requirements.txt  simple_debug.py  simple_debug_2.py  test_create_preorder.py  test_patch_preorder.py  update_schema.py  verify_fix.py
backend/scripts/: init_db.py
backend/src/: main.py
backend/src/application/: __init__.py  auth_service.py  (+7 more)
collie-store/: index.html  package-lock.json  package.json  tailwind.config.js
collie-store/src/: App.css  index.css
frontend/: cypress.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
gusmi-store/: .env.example  index.html  package-lock.json  package.json
gusmi-store/src/: App.jsx  index.css  main.jsx
(+109 files in other folders)
